# crx3-rs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: binary-release.yml  ci.yml  release.yml  security-audit.yml
crx3-cli/: Cargo.toml
crx3-rs/: Cargo.toml  build.rs
src/: lib.rs  main.rs
