[workspace]
members = [
    "crx3-rs",
    "crx3-cli",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
authors = ["Taisuke Miyazaki <imishinist@gmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/imishinist/crx3-rs"

[workspace.dependencies]
prost = "0.13.5"
rsa = { version = "0.9.8", features = ["pem", "sha2"] }
rand = "0.8.5"
crx3-rs = { path = "crx3-rs" }
