[package]
name = "crx3-rs"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
description = "Chrome extension CRX3 format parser and builder in Rust"
license.workspace = true
repository.workspace = true
keywords = ["chrome", "extension", "crx", "crx3"]
categories = ["parser-implementations"]
publish = true

[dependencies]
prost.workspace = true
rsa.workspace = true
rand.workspace = true

[build-dependencies]
prost-build = "0.13.5"